[INJIWEB-1711] - Migration from Custom Objects to Library Objects - Replace custom DTOs with official OpenID4VP library classes - Update CredentialMatchingServiceImpl to use PresentationDefinition, InputDescriptor, Constraints, Fields, and Filter from io.mosip.openID4VP - Simplify presentation definition extraction by using direct object access instead of manual JSON parsing - Update test classes to use new OpenID4VP library constructors and methods
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>